# playground-gaia

./: .gitignore  CMakeLists.txt  README.md  prj.conf  west.yml
boards/: native_sim.conf  native_sim.overlay  stm32l562e_dk.conf
src/: main.cpp  placement_new.hpp
src/widgets/: hello_widget.cpp  hello_widget.hpp  widget.cpp  widget.hpp
